kubernetes/apps/observability/fluent-bit/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fluent-bit
  namespace: observability
  labels:
    route.scope: internal
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: network
  hostnames:
    - fluent-bit.observability.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fluent-bit
          port: 2020
